# ConnectN

./: .gitignore  CMakeLists.txt  README.md  main.cpp  testing.cpp
doxygen/: Doxyfile
doxygen/html/: annotated.html  board_8h_source.html  class_board-members.html  class_board.html  class_credits-members.html  class_credits.html  class_game-members.html  class_game.html  class_menu-members.html  class_menu.html  class_piece-members.html  class_piece.html  class_player-members.html  class_player.html  class_program_manager-members.html  class_program_manager.html  class_scene-members.html  class_scene.html  class_scene_manager-members.html  class_scene_manager.html  class_settings-members.html  class_settings.html  class_settings_manager-members.html  class_settings_manager.html  classes.html  color_8h_source.html  credits_8h_source.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7a0f3de698247c2b155e56e57851969c.html  dir_92063fce0b77ba4ddd957cfc006babca.html  dir_9d2e1d45a8a818310a9567505ed47b4f.html  dir_a045c1da935d427a8cfb31d3c009a6a4.html  files.html  (+27 more)
include/: board.h  color.h  credits.h  game.h  language.h  menu.h  piece.h  player.h  position.h  program_manager.h  scene.h  scene_manager.h  settings.h  settings_manager.h
source/: CMakeLists.txt  board.cpp  credits.cpp  game.cpp  menu.cpp  piece.cpp  player.cpp  position.cpp  program_manager.cpp  scene_manager.cpp  settings.cpp  settings_manager.cpp
test/: integration_test_input.txt  system_test_expected_output.txt  system_test_input.txt  system_test_output.txt
(+58 files in other folders)
